--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,8 +1,37 @@
 @import 'config';
 @import 'nav';
 
-// mobile first 
+// header
 
-@include mobile {
+
+.about {
+    @include flexCenter(column);
+    margin: 6rem 15rem;
+    border: 2px solid red;
+    flex: 1;
+
+        img {
+            max-width: 12rem;
+        }
+
+        p {
+            margin: 2rem;
+            padding: 0 2rem;
+            text-align: center;
+            display: inline-block;
+            position: relative;
+
+            span {
+                border-bottom: 6px solid $pink;
+                display: inline-block;
+                line-height: 5px;
+                margin: 5px 0 
+                
+            }
+        }
 
 }
+
+// my work container
+
+
