--- a/css/styles.scss
+++ b/css/styles.scss
@@ -34,4 +34,49 @@
 
 // my work container
 
+.work {
+    border: 2px solid red;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem 0;
+
+    h1 {
+        font-weight: weights(bold);
+        color: $dark;
+    }
+
+    .work-container {
+        @include flexCenter(column);
+        width: 100%;
+
+        .row {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            flex: 1;
+
+                .work-item {
+                    @include flexCenter(column);
+                    margin: 2rem 1rem;
+
+                    img {
+                        max-width: 20rem;
+                        margin-bottom: 1rem;
+                    }
+
+                    h3 {
+                        font-weight: weights(light);
+                        font-size: 1rem;
+                    }
+
+                }
+
+
+
+        }
+
+    }
+}
+
 
