--- a/css/styles.css
+++ b/css/styles.css
@@ -13,14 +13,14 @@ html {
 }
 
 @media (min-width: 376px) {
-  header {
+  #header {
     height: 100vh;
   }
-  header h1 {
+  #header h1 {
     color: #ffa69e;
     font-size: 1.4rem;
   }
-  header .navbar {
+  #header .navbar {
     height: 10vh;
     border-bottom: 3px solid #ffa69e;
     display: -webkit-box;
@@ -42,7 +42,7 @@ html {
     color: #5e6472;
     padding: 0 3rem;
   }
-  header .navbar ul {
+  #header .navbar ul {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -51,10 +51,10 @@ html {
         -ms-flex-direction: row;
             flex-direction: row;
   }
-  header .navbar ul li {
+  #header .navbar ul li {
     list-style: none;
   }
-  header .navbar ul li a {
+  #header .navbar ul li a {
     text-decoration: none;
     cursor: pointer;
     color: #5e6472;
@@ -62,9 +62,119 @@ html {
     font-size: 1.1rem;
     font-weight: 300;
   }
-  header .navbar ul li a:hover, header .navbar ul li a:active {
+  #header .navbar ul li a:hover, #header .navbar ul li a:active {
     color: #ffa69e;
   }
+}
+
+#project-header .navbar {
+  height: 10vh;
+  border-bottom: 3px solid #ffa69e;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  color: #5e6472;
+  padding: 0 3rem;
+}
+
+#project-header .navbar ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+#project-header .navbar ul li {
+  list-style: none;
+}
+
+#project-header .navbar ul li a {
+  text-decoration: none;
+  cursor: pointer;
+  color: #5e6472;
+  margin-left: 2rem;
+  font-size: 1.1rem;
+  font-weight: 300;
+}
+
+#project-header .navbar ul li a:hover, #project-header .navbar ul li a:active {
+  color: #ffa69e;
+}
+
+.project-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 1rem 3rem;
+}
+
+.project-container h1 {
+  color: #5e6472;
+  font-weight: 400;
+  border-bottom: 6px solid #ffa69e;
+  display: inline-block;
+  line-height: 5px;
+  margin: 20px 0;
+}
+
+.project-container h4 {
+  color: #5e6472;
+  font-weight: 400;
+  font-size: 1.1rem;
+  margin-bottom: .8rem;
+}
+
+.project-container p {
+  font-weight: 300;
+  font-size: 1rem;
+}
+
+.project-images {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 3rem;
+}
+
+.project-images img {
+  max-width: 50rem;
+  margin: 1rem;
 }
 
 .header-about {
@@ -172,12 +282,21 @@ html {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 2rem 1rem;
+  margin: 2rem 1.1rem;
 }
 
 .work .work-container .row .work-item img {
   max-width: 20rem;
   margin-bottom: 1rem;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.work .work-container .row .work-item img:hover {
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  -webkit-transform: rotate(-3deg);
+          transform: rotate(-3deg);
 }
 
 .work .work-container .row .work-item h3 {
@@ -200,7 +319,7 @@ html {
       -ms-flex-align: center;
           align-items: center;
   width: 100vw;
-  padding: 2rem 0;
+  padding: 1rem 0;
 }
 
 .about .about-container {
@@ -216,6 +335,7 @@ html {
 
 .about .about-container .about-item {
   margin: 1rem 0;
+  text-align: center;
 }
 
 .about .about-container .about-item h3 {
@@ -224,6 +344,24 @@ html {
   display: inline-block;
   line-height: 5px;
   margin: 5px 0;
+  margin-bottom: 1rem;
+}
+
+.about .about-container .about-item h5 {
+  font-size: 1.1rem;
+}
+
+.about .about-container .about-item p {
+  margin-bottom: .5rem;
+}
+
+.about .about-container .about-item a {
+  text-decoration: none;
+  color: #5e6472;
+}
+
+.about .about-container .about-item a:hover, .about .about-container .about-item a:focus {
+  color: #ffa69e;
 }
 
 footer {
@@ -247,5 +385,9 @@ footer {
 footer p {
   font-size: .8rem;
   font-weight: 300;
+}
+
+footer i {
+  color: #ffa69e;
 }
 /*# sourceMappingURL=styles.css.map */
