--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,5 +1,6 @@
 @import 'config';
 @import 'nav';
+@import 'work';
 
 // header
 
@@ -55,11 +56,17 @@
 
                 .work-item {
                     @include flexCenter(column);
-                    margin: 2rem 1rem;
+                    margin: 2rem 1.1rem;
 
                     img {
                         max-width: 20rem;
                         margin-bottom: 1rem;
+                        transition: all 0.3s ease;
+
+                        &:hover {
+                            transition: all 0.3s ease;
+                            transform: rotate(-3deg);
+                        }
                     }
 
                     h3 {
@@ -78,7 +85,7 @@
 .about {
     @include flexCenter(column);
     width: 100vw;
-    padding: 2rem 0;
+    padding: 1rem 0;
 
     .about-container {
         display: flex;
@@ -87,14 +94,34 @@
 
             .about-item {
                 margin: 1rem 0;
+                text-align: center;
+
 
                 h3 {
                     font-weight: weights(regular);
                     border-bottom: 6px solid $pink;
                     display: inline-block;
                     line-height: 5px;
-                    margin: 5px 0 
+                    margin: 5px 0 ;
+                    margin-bottom: 1rem;
+                }
 
+                h5 {
+                    font-size: 1.1rem;
+                }
+
+                p {
+                    margin-bottom: .5rem;
+
+                }
+
+                a {
+                    text-decoration: none;
+                    color: $dark;
+
+                    &:hover, &:focus {
+                        color: $pink;
+                    }
                 }
             }
     }
@@ -110,6 +137,10 @@ footer {
     p {
         font-size: .8rem;
         font-weight: weights(light);
+    }
+
+    i {
+        color: $pink;
     }
 }
 
