--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,135 +1,63 @@
 @import 'config';
-@import 'nav';
+@import 'home';
 @import 'work';
+@import 'about';
 
-// header
 
-.header-about {
-    @include flexCenter(column);
-    margin: 6rem 15rem;
-    flex: 1;
+// NAVIGATION - do not change - same for every page
 
-        img {
-            max-width: 12rem;
+// desktop navigation styling
+@include desktop {
+
+    #header {
+
+        h1 {
+            color: $pink;
+            font-size: 1.4rem;
         }
-
-        p {
-            margin: 2rem;
-            padding: 0 2rem;
-            text-align: center;
-            display: inline-block;
-            position: relative;
-
-            span {
-                border-bottom: 6px solid $pink;
-                display: inline-block;
-                line-height: 5px;
-                margin: 5px 0 
-                
-            }
-        }
-
-}
-
-// my work container
-
-.work {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 2rem 0;
-
-    h1 {
-        font-weight: weights(bold);
-        color: $dark;
-    }
-
-    .work-container {
-        @include flexCenter(column);
-        width: 100%;
-
-        .row {
+        .navbar {
+            height: 10vh;
+            border-bottom: 3px solid $pink;
             display: flex;
             flex-direction: row;
+            justify-content: center;
             align-items: center;
-            flex: 1;
+            justify-content: space-between;
+            color: $dark;
+            padding: 0 3rem;
 
-                .work-item {
-                    @include flexCenter(column);
-                    margin: 2rem 1.1rem;
+            ul {
+                display: flex;
+                flex-direction: row;
 
-                    img {
-                        max-width: 20rem;
-                        margin-bottom: 1rem;
-                        transition: all 0.3s ease;
+                li {
+                    list-style: none;
 
-                        &:hover {
-                            transition: all 0.3s ease;
-                            transform: rotate(-3deg);
-                        }
-                    }
-
-                    h3 {
+                    a {
+                        text-decoration: none;
+                        cursor: pointer;
+                        color: $dark;
+                        margin-left: 2rem;
+                        font-size: 1.1rem;
                         font-weight: weights(light);
-                        font-size: 1rem;
-                    }
 
-                }
-        }
-
-    }
-}
-
-// about container
-
-.about {
-    @include flexCenter(column);
-    width: 100vw;
-    padding: 1rem 0;
-
-    .about-container {
-        display: flex;
-        flex-direction: column;
-        width: 70vw;
-
-            .about-item {
-                margin: 1rem 0;
-                text-align: center;
-
-
-                h3 {
-                    font-weight: weights(regular);
-                    border-bottom: 6px solid $pink;
-                    display: inline-block;
-                    line-height: 5px;
-                    margin: 5px 0 ;
-                    margin-bottom: 1rem;
-                }
-
-                h5 {
-                    font-size: 1.1rem;
-                }
-
-                p {
-                    margin-bottom: .5rem;
-
-                }
-
-                a {
-                    text-decoration: none;
-                    color: $dark;
-
-                    &:hover, &:focus {
-                        color: $pink;
+                        &:hover,
+                        &:active {
+                            color: $pink;
+                        }
                     }
                 }
             }
+        }
     }
 }
 
-// footer
+// mobile navigation styling TBD
+
+// FOOTER - do not change - same for every page - DESKTOP AND MOBILE
 
 footer {
+    border: 2px solid green;
     height: 10vh;
     @include flexCenter(column);
     border-top: 3px solid $pink;
@@ -144,4 +72,6 @@ footer {
     }
 }
 
-
+body {
+    border: 2px solid black;
+}
