added mobile navigation styling and js interactivity

--- a/css/_work.scss
+++ b/css/_work.scss
@@ -4,7 +4,7 @@
 .project-header {
     @include flexCenter(column);
     margin: 1rem 3rem;
-    border: 2px solid purple;
+    border: 2px solid red;
 
         h1 {
             color: $dark;
