--- a/css/_work.scss
+++ b/css/_work.scss
@@ -3,8 +3,8 @@
 
 .project-header {
     @include flexCenter(column);
-    margin: 1rem 3rem;
-    border: 2px solid red;
+    margin: 1rem 4rem;
+    text-align: center;
 
         h1 {
             color: $dark;
@@ -20,6 +20,7 @@
             font-weight: weights(regular);
             font-size: 1.1rem;
             margin-bottom: .8rem;
+            padding: 0 5rem;
         }
 
         p {
@@ -32,18 +33,42 @@
 .project-images {
 @include flexCenter(column);
 margin: 0 3rem;
+text-align: center;
 
-    img {
-        margin: 1rem;
+    a {
+        text-decoration: none;
+        color: $pink;
+    }
+
+    p {
+        margin: 0 6rem;
+
+        @include mobile {
+            margin: 0 2rem;
+        }
+    }
+
+    img, iframe {
+        border: 2px solid red;
 
         @include desktop {
-            max-width: 50rem;
+            width: 50rem;
+            height: 30rem;
+            margin: 1rem;
         }
         
         @include mobile {
-            max-width: 20rem;
+            width: 30rem;
+            height: 15rem;
+            margin: 1rem;
         }
     }
+
+    // iframe {
+    //     border: 2px solid red;
+    //     max-width: 50rem;
+    //     max-height: 30rem;
+    // }
 
 }
 
