--- a/css/_work.scss
+++ b/css/_work.scss
@@ -49,26 +49,28 @@ text-align: center;
     }
 
     img, iframe {
-        border: 2px solid red;
 
         @include desktop {
             width: 50rem;
-            height: 30rem;
             margin: 1rem;
         }
         
         @include mobile {
             width: 30rem;
-            height: 15rem;
             margin: 1rem;
         }
     }
 
-    // iframe {
-    //     border: 2px solid red;
-    //     max-width: 50rem;
-    //     max-height: 30rem;
-    // }
+    iframe {
+        @include desktop {
+            height: 30rem;
+        }
+
+        @include mobile {
+            height: 15rem;
+        }
+    }
+
 
 }
 
