--- a/css/styles.scss
+++ b/css/styles.scss
@@ -14,6 +14,19 @@
       cursor: pointer;
     }
 
+    i{
+
+      &.down {
+        font-size: 1.3rem;
+      }
+
+      color: rgba($pink, 0.5);
+
+        &:hover {
+          color: $pink;
+        }
+      }
+
     .navbar {
       height: 10vh;
       border-bottom: 3px solid $pink;
