--- a/dir/css/styles.scss
+++ b/dir/css/styles.scss
@@ -16,21 +16,18 @@
       font-size: 1.4rem;
       cursor: pointer;
       text-decoration: none;
-    
     }
 
-    i{
-
-      &.down {
+    .header-about {
+      i.down {
         font-size: 1.3rem;
-      }
-
-      color: rgba($pink, 0.5);
+        color: rgba($pink, 0.5);
 
         &:hover {
           color: $pink;
         }
       }
+    }
 
     .navbar {
       height: 10vh;
@@ -125,11 +122,15 @@
           position: absolute;
           top: 1.5rem;
           right: 3rem;
-          color: #fff;
-
-          &:hover {
-            color: $dark;
+          
+          i {
+            color: #fff;
+            z-index: 10;
+            &:hover {
+              color: $dark;
+            }
           }
+
         }
 
         li {
